--- a/pom.xml
+++ b/pom.xml
@@ -172,28 +172,38 @@
 					<tagNameFormat>release-@{project.version}</tagNameFormat>
 				</configuration>
 			</plugin>
-
-			<!-- JAR signing -->
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jarsigner-plugin</artifactId>
-				<version>1.2</version>
-
-				<executions>
-					<execution>
-						<id>sign</id>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-					</execution>
-				</executions>
-
-				<configuration>
-					<keystore>${signerKeyStore}</keystore>
-					<alias>${signerAlias}</alias>
-					<storepass>${signerPassword}</storepass>
-				</configuration>
-			</plugin> -->
 		</plugins>
 	</build>
+
+	<profiles>
+		<!-- Attach javadocs and source .jars -->
+		<profile>
+			<id>sign</id>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jarsigner-plugin</artifactId>
+						<version>1.2</version>
+
+						<executions>
+							<execution>
+								<id>sign</id>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+
+						<configuration>
+							<keystore>${signerKeyStore}</keystore>
+							<alias>${signerAlias}</alias>
+							<storepass>${signerPassword}</storepass>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
